private_manifests/configmap/ingress_ens.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: zcp-system
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
    ingress.bluemix.net/ALB-ID: private-crb4a7d99fa6c7451d87bba337f3ecde3f-alb1
spec:
  rules:
  - host: ens-monitoring.cloudzcp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: 3000
  tls:
    - secretName: cloudzcp-io-cert
      hosts:
        - ens-monitoring.cloudzcp.io
