private_manifests/configmap/ingress_hioms_dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: zcp-system
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
    ingress.bluemix.net/ALB-ID: private-cr9b51e2d31cef4589984913b350fa8ed8-alb1
spec:
  rules:
  - host: oms-dev-monitoring.cloudzcp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: 3000
  tls:
    - secretName: cloudzcp-io-cert
      hosts:
        - oms-dev-monitoring.cloudzcp.io
