private_manifests/configmap/ingress_labs.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: zcp-system
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
#    ingress.bluemix.net/ALB-ID: private-crd2613c5feb24443391bc58fc7276182b-alb1
spec:
  rules:
  - host: labs-monitoring.cloudzcp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: 3000
  tls:
    - secretName: cloudzcp-io-cert
      hosts:
        - labs-monitoring.cloudzcp.io
